force-app/main/default/objects/User_Contact_Point__c/User_Contact_Point__c.object-meta.xml
<CustomObject>
    <description>Junction object between User and Contact Point.</description>
    <label>User Contact Point</label>
    <nameField>
        <displayFormat>UCP-{00000}</displayFormat>
        <label>User Contact Point Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Contact Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>