force-app/main/default/objects/User_Contact_Point__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>User Contact Points</relationshipLabel>
    <relationshipName>User_Contact_Points</relationshipName>
    <type>Lookup</type>
</CustomField>