force-app/main/default/objects/User_Contact_Point__c/fields/Contact_Point__c.field-meta.xml
<CustomField>
    <fullName>Contact_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Point</label>
    <referenceTo>Contact_Point__c</referenceTo>
    <relationshipLabel>User Contact Points</relationshipLabel>
    <relationshipName>User_Contact_Points</relationshipName>
    <type>Lookup</type>
</CustomField>